fixes #213 - Dark mode - Product filter date change the color text

--- a/src/components/ComponentDatePicker/index.scss
+++ b/src/components/ComponentDatePicker/index.scss
@@ -19,7 +19,7 @@
 
   .react-datepicker {
     border: 0;
-    padding: 0 16px 16px 16px;
+    padding: 0;
     vertical-align: middle;
     display: flex;
   }
@@ -30,22 +30,22 @@
   }
 
   .react-datepicker__month-container {
-    margin-right: 20px;
-
+    border-right: 1px solid $gray-500;
+    border-bottom: 1px solid $gray-500;
+    padding: 15px;
     &:last-child {
-      margin-right: 0;
+      border-right: 0;
     }
   }
 
   .react-datepicker__current-month {
     font-family: $font-family-sans-serif;
-    color: $color-blue;
   }
 
   .react-datepicker__day-name,
   .react-datepicker__day,
   .react-datepicker__time-name {
-    color: rgba($color: $color-blue, $alpha: 0.8);
+    color: $black;
     font-family: $font-family-sans-serif;
   }
 
@@ -61,14 +61,14 @@
   .react-datepicker__year-text--selected,
   .react-datepicker__year-text--in-selecting-range,
   .react-datepicker__year-text--in-range {
-    background-color: rgba($color: $color-blue-3, $alpha: 0.4);
+    background-color: rgba($color: $color-blue-3, $alpha: 0.2);
   }
 
   .react-datepicker__day--keyboard-selected,
   .react-datepicker__month-text--keyboard-selected,
   .react-datepicker__quarter-text--keyboard-selected,
   .react-datepicker__year-text--keyboard-selected {
-    background-color: rgba($color: $color-blue-3, $alpha: 0.4);
+    background-color: rgba($color: $color-blue-3, $alpha: 0.2);
     outline: none;
   }
 
@@ -77,7 +77,7 @@
   .react-datepicker__quarter-text,
   .react-datepicker__year-text {
     &:hover {
-      background-color: rgba($color: $color-blue-3, $alpha: 0.4);
+      background-color: rgba($color: $color-blue-3, $alpha: 0.2);
     }
   }
   .react-datepicker__year-read-view--down-arrow,
@@ -89,5 +89,55 @@
   }
   .react-datepicker__close-icon {
     right: 0;
+  }
+  .react-datepicker__navigation {
+    top: 17px;
+  }
+
+  .react-datepicker__navigation--previous {
+    left: 15px;
+  }
+  .react-datepicker__navigation--next {
+    right: 15px;
+  }
+}
+
+.dark {
+  .react-datepicker {
+    background-color: $dark;
+    color: $white;
+
+    .react-datepicker__year-read-view--down-arrow,
+    .react-datepicker__month-read-view--down-arrow,
+    .react-datepicker__month-year-read-view--down-arrow,
+    .react-datepicker__navigation-icon::before {
+      border-color: $green;
+    }
+
+    .react-datepicker__current-month,
+    .react-datepicker__day-name,
+    .react-datepicker__day,
+    .react-datepicker__time-name {
+      color: $white;
+    }
+
+    .react-datepicker__month-container {
+      border-color: transparentize($color: $color-blue-1, $amount: 0.7);
+    }
+  }
+
+  .react-datepicker__day--selected,
+  .react-datepicker__day--in-selecting-range,
+  .react-datepicker__day--in-range,
+  .react-datepicker__month-text--selected,
+  .react-datepicker__month-text--in-selecting-range,
+  .react-datepicker__month-text--in-range,
+  .react-datepicker__quarter-text--selected,
+  .react-datepicker__quarter-text--in-selecting-range,
+  .react-datepicker__quarter-text--in-range,
+  .react-datepicker__year-text--selected,
+  .react-datepicker__year-text--in-selecting-range,
+  .react-datepicker__year-text--in-range {
+    background-color: rgba($color: $color-blue-8, $alpha: 0.3);
   }
 }
